# STM32_EEEPROMTest

./: .gitignore  CMakeLists.txt  EEEPROM.ioc  EEEPROMTest.ioc
Core/Inc/: eeprom_emul.h  eeprom_emul_conf.h  main.h  retarget.h  stm32g0xx_it.h
Core/Src/: eeprom_emul.cpp  main.cpp  stm32g0xx_hal_msp.c  stm32g0xx_it.c  system_stm32g0xx.c
